# 3ddfav2_cpp

./: face3d_model.py
cpp/tnn_demo/: CMakeLists.txt  TNNFaceAligner.cpp  TNNFaceAligner.cpp1  demo.cpp  demo.cpp1  demo_detection.cpp  readme.md
cpp/tnn_demo/base/: face3d_tnn.cpp  face3d_tnn.h  face_det_3d.cpp  face_det_3d.h
cpp/tnn_demo/utils/: tnn_sdk_sample.cpp  tnn_sdk_sample.h
models/: face3d.tnnproto
models/facealigner/: blazeface_anchors.txt  youtu_face_alignment_phase1.tnnproto  youtu_face_alignment_phase2.tnnproto  youtu_mean_pts_phase1.txt  youtu_mean_pts_phase2.txt
